Apply to suggest; Remove some unused class