@@ -3,7 +3,9 @@ package com.tumuyan.dictspider;
 
 import java.net.URLEncoder;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.Map.Entry;
 
 
 public class UrlEncoder {
@@ -30,24 +32,24 @@ public class UrlEncoder {
     public static Map GetArgs(String params) throws Exception{
         Map map=new HashMap();
         String[] pairs=params.split("&");
-        for(int i=0;i<pairs.length;i++){
-            int pos=pairs[i].indexOf("=");
-            if(pos==-1) continue;
-            String argname=pairs[i].substring(0,pos);
-            String value=pairs[i].substring(pos+1);
-            value= URLEncoder.encode(value,"utf-8");
-            map.put(argname,value);
+        for (String pair : pairs) {
+            int pos = pair.indexOf("=");
+            if (pos == -1) continue;
+            String argname = pair.substring(0, pos);
+            String value = pair.substring(pos + 1);
+            value = URLEncoder.encode(value, StandardCharsets.UTF_8);
+            map.put(argname, value);
         }
         return map;
     }
 
     //将map转化为指定的String类型
     public static String TransMapToString(Map map){
-        java.util.Map.Entry entry;
+        Entry entry;
         StringBuffer sb = new StringBuffer();
         for(Iterator iterator = map.entrySet().iterator(); iterator.hasNext();)
         {
-            entry = (java.util.Map.Entry)iterator.next();
+            entry = (Entry)iterator.next();
             sb.append(entry.getKey().toString()).append( "=" ).append(null==entry.getValue()?"":
                     entry.getValue().toString()).append (iterator.hasNext() ? "&" : "");
         }
@@ -59,7 +61,7 @@ public class UrlEncoder {
         Map map = new HashMap();
         java.util.StringTokenizer items;
         for(StringTokenizer entrys = new StringTokenizer(mapString, "&"); entrys.hasMoreTokens();
-            map.put(items.nextToken(), items.hasMoreTokens() ? ((Object) (items.nextToken())) : null))
+            map.put(items.nextToken(), items.hasMoreTokens() ? items.nextToken() : null))
             items = new StringTokenizer(entrys.nextToken(), "=");
         return map;
     }
